<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Employee Survey</string>
    <string name="action_logout">Logout</string>
    <string name="action_send_report">Send Report </string>
    <string name="hello_world">Hello world!</string>
    <string name="welcome_screen_">"Welcome Screen "</string>
    <string name="login_screen_">"Login Form "</string>
    <string name="hint_username">username</string>
    <string name="hint_storename">store name </string>
    <string name="button_login">Login</string>
    <string name="button_cancel">Cancel</string>
    <string name="female">Female</string>
    <string name="male">Male</string>

    <!-- #8211; for (-) -->
    <string name="_60_">60 ></string>
    <string name="_50_60">50 - 60</string>
    <string name="_40_50">40 - 50</string>
    <string name="_30_40">30 - 40</string>
    <string name="_20_30">20 - 30</string>
    <string name="_10_20">10 - 20</string>
    <string name="_0_10">0 - 10</string>
    <string name="group_type">Group Type</string>
    <string name="gender_agegrp">Gender and Age group</string>
    <string name="employee_survey">Employee Survey</string>
    <string name="are_you_sure_you_want_to_logout_from_application_">Are you sure you want to logout from application ?</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="number_of_persons_">Number of persons :</string>
    <string name="are_you_sure_you_want_to_delete_this_row">Are you sure you want to delete this row :</string>
    <string name="friends">Friends</string>
    <string name="couple">Couple</string>
    <string name="family">Family</string>
    <string name="family_with_child">Family with child</string>
    <string name="colleagues">Colleagues</string>
    <string name="others">others</string>

    <string-array name="group_type">
        <item name="friends">Friends</item>
        <item name="couple">Couple</item>
        <item name="family">Family</item>
        <item name="family_with_child">Family with child</item>
        <item name="colleagues">Colleagues</item>
        <item name="others">others</item>
    </string-array>
    <string-array name="malefemaleage_array">
        <item name="_0_10">0 - 10</item>
        <item name="_10_20">10 - 20</item>
        <item name="_20_30">20 - 30</item>
        <item name="_30_40">30 - 40</item>
        <item name="_40_50">40 - 50</item>
        <item name="_50_60">50 - 60</item>
        <item name="_60_">60 ></item>
    </string-array>
        <string name="save_and_verify">Save and Verify</string>

</resources>